# vitamtp

./: .gitignore  .travis.yml  ChangeLog  README.md  autogen.sh  configure.ac  libvitamtp.pc.in  version_bump.sh
debian/: changelog  control  copyright  libvitamtp4.postinst  libvitamtp4.udev  libvitamtp5.postinst  libvitamtp5.udev  rules
rpmbuild/: vitamtp-fedora.spec  vitamtp-opensuse.spec  vitamtp.spec
src/: Makefile.am  database.c  datautils.c  device.c  opencma.c  opencma.h  ptp-pack.c  ptp.c  ptp.h  socketpair.c  socketpair.h  usb.c  utilities.c  vitamtp.c  vitamtp.h  wireless.c
